Entenhausen-Referenzen entfernt, Präambel aufgeräumt

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Dissertationsvorlage Medma.lot
 Dissertationsvorlage Medma.synctex.gz
 Dissertationsvorlage Medma.toc
 Dissertationsvorlage Medma.aux
+Deckblatt.aux
+Deckblatt.synctex.gz
